모바일 작업

--- a/mobile/resources/html/sub.html
+++ b/mobile/resources/html/sub.html
@@ -13,14 +13,6 @@
 	<script src="/resources/js/gu.renew.common.ui.js"></script>
 	<script>
 		$(function () {
-			$(window).scroll(function () {
-				var top = $(window).scrollTop();
-				if (top > $(".content_area").offset().top - 43) {
-					$(".wrap").addClass("fixed")
-				} else {
-					$(".wrap").removeClass("fixed")
-				}
-			})
 		})
 	</script>
 </head>
@@ -52,8 +44,12 @@
 					<span>11.30</span>
 				</li>
 			</ul>
+			<div class="conner_left"></div>
+			<div class="conner_right"></div>
 		</div>
-		<div class="top_info_fixed">
+	</div>
+	<div class="content_area bgWhite">
+		<div class="top_info">
 			<ul>
 				<li class="default">
 					<div class="title">정상계약</div>
@@ -77,9 +73,7 @@
 				</li>
 			</ul>
 		</div>
-	</div>
-	<div class="content_area bgWhite">
-		<br><br><br><br><br><br><br><br><br><br><<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+		1<br>2<br>3<br>4<br><br><br><br><br><br><br><<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 	</div>
 	<!-- bottom_fixed_menu_area : s	-->
 	<div class="bottom_fixed_menu_area">
