--- a/mobile/resources/html/컨설팅.html
+++ b/mobile/resources/html/컨설팅.html
@@ -46,7 +46,11 @@
 				</li>
 			</ul>
 		</div>
-		<div class="top_info_fixed">
+		<div class="conner_left"></div>
+		<div class="conner_right"></div>
+	</div>
+	<div class="content_area bgWhite">
+		<div class="top_info">
 			<ul>
 				<li class="default">
 					<div class="title">정상계약</div>
@@ -71,8 +75,6 @@
 			</ul>
 			<div class="btn_area"><a href="#" class="btn_inner"><span>선택하신 컨설팅 전후 비교분석 결과를 확인해보세요!</span></a></div>
 		</div>
-	</div>
-	<div class="content_area bgWhite">
 		<br><br><br><br><br><br><br><br><br><br><<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 	</div>
 	<!-- bottom_fixed_menu_area : s	-->
