--- a/mobile/resources/html/진단상세.html
+++ b/mobile/resources/html/진단상세.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no" name="viewport">
-	<title>Title</title>
+	<title>submain</title>
 	<link href="/resources/css/gu.renew.style.css" rel="stylesheet">
 	<script src="/resources/js/lib/jquery.min.js"></script>
 	<script src="/resources/js/lib/jquery.nice-select.min.js"></script>
@@ -11,25 +11,40 @@
 	<script src="/resources/js/lib/charts.js"></script>
 	<script src="/resources/js/lib/animated.js"></script>
 	<script src="/resources/js/gu.renew.common.ui.js"></script>
-
 	<script>
-		//state_info button click event
-		$(document).on("click", ".state_info .btn_info", function () {
-			var target = $(this).closest(".state_item");
-			if (!target.hasClass("open")) {
-				target.addClass("open");
-				target.find(".insurance_list2").slideDown();
-			} else {
-				target.removeClass("open");
-				target.find(".insurance_list2").slideUp();
-			}
-		});
+		$(function () {
+			//state_info button click event
+			$(document).on("click", ".state_info .btn_info", function () {
+				var target = $(this).closest(".state_item");
+				if (!target.hasClass("open")) {
+					target.addClass("open");
+					target.find(".insurance_list2").slideDown();
+				} else {
+					target.removeClass("open");
+					target.find(".insurance_list2").slideUp();
+				}
+			});
+			//서브메뉴 리스트 누르면 열리기
+			$(document).on("click", ".btn_sub_menu_toggle", function () {
+				var target = $(this);
+				if (!target.hasClass("open")) {
+					target.addClass("open").text("닫침");
+					$(".all_menu_area").slideDown(200);
+					$(".dim_bg").fadeIn(200);
+				} else {
+					target.removeClass("open").text("열림");
+					$(".all_menu_area").slideUp(200);
+					$(".dim_bg").fadeOut(200);
+				}
+			});
+			$("")
+		})
 	</script>
 </head>
 <body>
-<div class="wrap ">
-	<div class="top_area">
-		<ul>
+<div class="wrap sub">
+	<div class="top_area tab_open">
+		<ul class="menu_area">
 			<li class="home"><a class="home" href="#">홈으로</a></li>
 			<li class="util">
 				<a class="menu01" href="#">등록</a>
@@ -37,9 +52,70 @@
 				<a class="menu03" href="#">pdf sample</a>
 			</li>
 		</ul>
+		<div class="member_info_area">
+			<div class="name">
+				<strong>권은아</strong>
+				고객님
+				<button class="btn_like">즐겨찾기</button><!--활성화 class="btn_like on"-->
+			</div>
+			<ul class="info">
+				<li>
+					<span class="sex">여</span>
+					<span class="bday">1981.05.30</span>
+					<span class="age">32세</span>
+				</li>
+				<li>
+					<button class="btn_alert">상령일</button>
+					<span>11.30</span>
+				</li>
+			</ul>
+		</div>
+		<div class="sub_tab_menu">
+			<ul class="tab_area">
+				<li><button class="tab"><span>보장진단</span></button></li>
+				<li><button class="tab on"><span>보장상세</span></button></li>
+			</ul>
+			<div class="sub_menu">
+				<div class="scroll_area">
+					<ul>
+						<li><a href="#" class="text on">전체현황</a></li>
+						<li><a href="#" class="text">사망</a></li>
+						<li><a href="#" class="text">휴유장해</a></li>
+						<li><a href="#" class="text">암</a></li>
+						<li><a href="#" class="text">뇌혈관질환</a></li>
+						<li><a href="#" class="text">심장질환</a></li>
+						<li><a href="#" class="text">의료비</a></li>
+						<li><a href="#" class="text">수술비</a></li>
+						<li><a href="#" class="text">입원비(일당)</a></li>
+						<li><a href="#" class="text">치매</a></li>
+						<li><a href="#" class="text">운전자</a></li>
+						<li><a href="#" class="text">배상책임</a></li>
+						<li><a href="#" class="text">치아·골절·화상</a></li>
+					</ul>
+				</div>
+				<button class="btn_sub_menu_toggle">열기</button>
+			</div>
+			<div class="all_menu_area">
+				<ul>
+					<li><a href="#" class="text on">전체현황</a></li>
+					<li><a href="#" class="text">사망</a></li>
+					<li><a href="#" class="text">휴유장해</a></li>
+					<li><a href="#" class="text">암</a></li>
+					<li><a href="#" class="text">뇌혈관질환</a></li>
+					<li><a href="#" class="text">심장질환</a></li>
+					<li><a href="#" class="text">의료비</a></li>
+					<li><a href="#" class="text">수술비</a></li>
+					<li><a href="#" class="text">입원비(일당)</a></li>
+					<li><a href="#" class="text">치매</a></li>
+					<li><a href="#" class="text">운전자</a></li>
+					<li><a href="#" class="text">배상책임</a></li>
+					<li><a href="#" class="text">치아·골절·화상</a></li>
+				</ul>
+			</div>
+		</div>
 	</div>
-
-	<div class="content_area">
+	<div class="dim_bg"></div>
+	<div class="content_area bgWhite">
 		<!-- content_radius_box : s-->
 		<div class="content_radius_box">
 			<div class="insurance_all_state">
@@ -1394,6 +1470,18 @@
 		</div>
 		<!-- content_radius_box : e-->
 	</div>
+	<!-- bottom_fixed_menu_area : s	-->
+	<div class="bottom_fixed_menu_area">
+		<button class="home"><span>고객리스트</span></button>
+		<ul>
+			<li><button class="bottom_menu menu01 on"><span>전체현황</span></button></li>
+			<li><button class="bottom_menu menu02"><span>가입현황</span></button></li>
+			<li><button class="bottom_menu menu03"><span>진단상세</span></button></li>
+			<li><button class="bottom_menu menu04"><span>컨설팅</span></button></li>
+			<li><button class="bottom_menu menu05"><span>그레프</span></button></li>
+		</ul>
+	</div>
+	<!-- bottom_fixed_menu_area : e	-->
 </div>
 
 </body>
