모바일 작업

--- a/mobile/resources/html/진단상세.html
+++ b/mobile/resources/html/진단상세.html
@@ -131,7 +131,7 @@
 		</div>
 	</div>
 	<div class="dim_bg"></div>
-	<div class="content_area bgWhite">
+	<div class="content_area bg_white">
 		<div class="insurance_all_state">
 			<div class="tab_content_box">
 				<div class="tab_content on">
