--- a/mobile/resources/html/컨설팅.html
+++ b/mobile/resources/html/컨설팅.html
@@ -49,7 +49,7 @@
 		<div class="conner_left"></div>
 		<div class="conner_right"></div>
 	</div>
-	<div class="content_area bgWhite">
+	<div class="content_area bg_white">
 		<div class="top_info">
 			<ul>
 				<li class="default">
