--- a/mobile/resources/html/sub.html
+++ b/mobile/resources/html/sub.html
@@ -13,6 +13,136 @@
 	<script src="/resources/js/gu.renew.common.ui.js"></script>
 	<script>
 		$(function () {
+			// Themes begin
+			am4core.useTheme(am4themes_animated);
+			// Themes end
+			//amchart 라이센스
+			am4core.options.commercialLicense = true;
+
+			// Create chart instance
+			var chart1 = am4core.create("chartdiv1", am4charts.RadarChart);
+			// Add data
+			chart1.data = [{
+				"category": "chartdiv1",
+				"value": 80,
+				"full": 100
+			}];
+
+			// Make chart not full circle
+			chart1.startAngle = -90;
+			chart1.endAngle = 270;
+			chart1.innerRadius = am4core.percent(79);
+			chart1.padding(0, 0, 0, 0);
+
+			// Set number format
+			chart1.numberFormatter.numberFormat = "#.#'%'";
+
+			// Create axes
+			var categoryAxis = chart1.yAxes.push(new am4charts.CategoryAxis());
+			categoryAxis.dataFields.category = "category";
+			categoryAxis.renderer.grid.template.location = 0;
+			categoryAxis.renderer.grid.template.strokeOpacity = 0;
+			categoryAxis.renderer.labels.template.disabled = true;
+			categoryAxis.renderer.minGridDistance = 10;
+
+			var valueAxis = chart1.xAxes.push(new am4charts.ValueAxis());
+			valueAxis.renderer.grid.template.strokeOpacity = 0;
+			valueAxis.min = 0;
+			valueAxis.max = 100;
+			valueAxis.strictMinMax = true;
+			valueAxis.renderer.labels.template.disabled = true;
+
+			// Create series
+			var series1 = chart1.series.push(new am4charts.RadarColumnSeries());
+			series1.dataFields.valueX = "full";
+			series1.dataFields.categoryY = "category";
+			series1.clustered = false;
+			series1.columns.template.strokeWidth = 0;
+			series1.columns.template.radarColumn.cornerRadius = 20;
+			series1.fill = am4core.color("#eeeeee");
+
+			var series2 = chart1.series.push(new am4charts.RadarColumnSeries());
+			series2.dataFields.valueX = "value";
+			series2.dataFields.categoryY = "category";
+			series2.clustered = false;
+			series2.columns.template.strokeWidth = 0;
+			series2.columns.template.radarColumn.cornerRadius = 20;
+			series2.fill = am4core.color("#01a7c4");
+			$(".counter_number .count").text(chart1.data[0].value);
+			counterStart();
+			//숫자 관련 count script 실행 class="count" 에있는 것들 실행
+
+
+			// Create chart instance
+			var chart2 = am4core.create("chartdiv2", am4charts.PieChart3D);
+			chart2.hiddenState.properties.opacity = 0; // this creates initial fade-in
+			chart2.depth = 10;
+			chart2.innerRadius = am4core.percent(20);
+			chart2.padding(0, 0, 0, 0);
+
+			chart2.data = [
+				{
+					country: "미가입",
+					value: 40,
+					config: {
+						fill: am4core.color("#777777")
+					},
+					configLabel: {
+						fill: am4core.color("#ffffff"),
+						fontSize: "16px"
+					}
+				},
+				{
+					country: "부족",
+					value: 34,
+					config: {
+						fill: am4core.color("#ff4858")
+					},
+					configLabel: {
+						fill: am4core.color("#ffffff"),
+						fontSize: "16px",
+						fontWeight: "600"
+					}
+				},
+				{
+					country: "충분",
+					value: 26,
+					config: {
+						fill: am4core.color("#01a7c4")
+					},
+					configLabel: {
+						fill: am4core.color("#ffffff"),
+						fontSize: "12px"
+					}
+				}
+			];
+
+			var series = chart2.series.push(new am4charts.PieSeries3D());
+			series.dataFields.value = "value";
+			series.slices.template.tooltipText = "";
+			series.ticks.template.disabled = true;
+			series.alignLabels = false;
+			series.labels.template.text = "{value.percent.formatNumber('#.')}%";
+			series.labels.template.radius = am4core.percent(-40);
+			series.hiddenState.properties.endAngle = -120;
+			series.slices.template.states.getKey("hover").properties.scale = 1;
+			series.slices.template.states.getKey("active").properties.scale = 1.15;
+			series.slices.template.states.getKey("active").properties.shiftRadius = 0;
+			series.slices.template.configField = "config";
+			series.labels.template.configField = "configLabel";
+			// series.slices.template.adapter.add("fill", (fill, target) => {
+			//   return am4core.color(myColors[target.dataItem.index]);
+			// });
+			// series.labels.template.adapter.add("fill", (fill, target) => {
+			//   return am4core.color(myLabelColors[target.dataItem.index]);
+			// });
+
+			subMenuActive(0);
+			//페이지 전환후 좌특 메뉴 활성화코드 실행
+
+			$(document).on("click", ".favorites", function () {
+				$(this).toggleClass('on');
+			});
 		})
 	</script>
 </head>
@@ -31,7 +161,7 @@
 			<div class="name">
 				<strong>권은아</strong>
 				고객님
-				<button class="btn_like">즐겨찾기</button><!--활성화 class="btn_like on"-->
+				<button class="favorites">즐겨찾기</button><!--활성화 class="btn_like on"-->
 			</div>
 			<ul class="info">
 				<li>
@@ -48,32 +178,76 @@
 			<div class="conner_right"></div>
 		</div>
 	</div>
-	<div class="content_area bgWhite">
-		<div class="top_info">
-			<ul>
-				<li class="default">
-					<div class="title">정상계약</div>
-					<div class="result"><strong>113</strong>건</div>
-				</li>
-				<li class="month">
-					<div class="title">정상계약</div>
-					<div class="result"><strong>11,264,530</strong>건</div>
-				</li>
-				<li class="list no">
-					<div class="title">미가입</div>
-					<div class="result"><strong>13</strong></div>
-				</li>
-				<li class="list lack">
-					<div class="title">부족</div>
-					<div class="result"><strong>13</strong></div>
-				</li>
-				<li class="list good">
-					<div class="title">충분</div>
-					<div class="result"><strong>13</strong></div>
-				</li>
-			</ul>
+	<div class="content_area bg_gray">
+		<div class="submain_wrap">
+			<div class="top_area">
+				<div class="info_grid big">
+					<ul>
+						<li class="title black">정상계약</li>
+						<li class="text skyblue"><strong class="count">3</strong>건</li>
+					</ul>
+					<ul>
+						<li class="title black">월납입보험료</li>
+						<li class="text"><strong class="count">1270660</strong>원</li>
+					</ul>
+				</div>
+			</div>
+
+			<div class="box box1">
+				<div class="graph_area">
+					<div id="chartdiv1"></div>
+					<div class="counter_number"><strong class="count"></strong>%</div>
+				</div>
+				<div class="info_grid right">
+					<ul>
+						<li class="title">납입완료</li>
+						<li class="text"><strong class="count">1270660</strong>원</li>
+					</ul>
+					<ul>
+						<li class="title">납입예정</li>
+						<li class="text"><strong class="count">1270660</strong>원</li>
+					</ul>
+					<ul>
+						<li class="title">총보험료</li>
+						<li class="text"><strong class="count">1111270660</strong>원</li>
+					</ul>
+				</div>
+			</div>
+
+			<div class="box box2">
+				<div class="graph_area">
+					<div id="chartdiv2"></div>
+				</div>
+				<div class="info_content_area">
+					<h3 class="title">고객님 보장이 부족합니다.</h3>
+					<div class="info_box">
+						<h4 class="info_title">전체 35개 보장중</h4>
+						<ul>
+							<li class="no">
+								<span class="tit">미가입</span>
+								<span class="number count">2</span>
+							</li>
+							<li class="lack">
+								<span class="tit">부족</span>
+								<span class="number count">5</span>
+							</li>
+							<li class="good">
+								<span class="tit">충분</span>
+								<span class="number count">28</span>
+							</li>
+						</ul>
+					</div>
+				</div>
+				<div class="result">
+					<strong class="color_point">34%</strong> 보장이 <strong class="color_point">부족</strong>하고
+					<strong>40%</strong> 보장이 <strong>미가입</strong> 상태입니다.
+				</div>
+			</div>
+
+
 		</div>
-		1<br>2<br>3<br>4<br><br><br><br><br><br><br><<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+
+
 	</div>
 	<!-- bottom_fixed_menu_area : s	-->
 	<div class="bottom_fixed_menu_area">
