insurance_all_state

--- a/mobile/resources/html/가입현황.html
+++ b/mobile/resources/html/가입현황.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no" name="viewport">
-	<title>Title</title>
+	<title>submain</title>
 	<link href="/resources/css/gu.renew.style.css" rel="stylesheet">
 	<script src="/resources/js/lib/jquery.min.js"></script>
 	<script src="/resources/js/lib/jquery.nice-select.min.js"></script>
@@ -11,97 +11,166 @@
 	<script src="/resources/js/lib/charts.js"></script>
 	<script src="/resources/js/lib/animated.js"></script>
 	<script src="/resources/js/gu.renew.common.ui.js"></script>
+	<script>
+		$(function () {
 
+		})
+	</script>
 </head>
 <body>
-<div class="wrap">
-	<div class="content_wrap">
-		<!-- content_area : s -->
-		<div class="content_area_sub">
-			<!-- insurance_list_box : s -->
-			<div class="insurance_list_box">
-				<!-- insurance_list : s -->
-				<div class="insurance_list">
-					<div class="tit_box">
-						<h3 class="sort_tit">정상계약</h3><span class="number"><strong>2</strong>건</span>
-					</div>
-					
-					<div class="list_box">
-						<a class="insurance" href="#">
-							<div class="name">무배당 알파 Plus 보장보험(Ⅱ)0904</div>
-							<div class="payment_info">
-								<span class="state">정상</span>
-								<div class="info">
-									<div class="payment"><strong>69,030</strong>원 <span>매월납/12년</span></div>
-									<div class="date">2009.07.17~2082.07.17</div>
-								</div>
-							</div>
-							<div class="logo"><img alt="한화생명" src="/resources/images/gu.renew.logo/logo_hanwha_life.png"></div>
-						</a>
-						<a class="insurance" href="#">
-							<div class="name">무배당 알파 Plus 보장보험(Ⅱ)0904</div>
-							<div class="payment_info">
-								<span class="state">정상</span>
-								<div class="info">
-									<div class="payment"><strong>69,030</strong>원 <span>매월납/12년</span></div>
-									<div class="date">2009.07.17~2082.07.17</div>
-								</div>
-							</div>
-							<div class="logo"><img alt="한화생명" src="/resources/images/gu.renew.logo/logo_bnp_life.png"></div>
-						</a>
-					</div>
-				</div>
-				<!-- insurance_list : e -->
-
-				<!-- insurance_list : s -->
-				<div class="insurance_list">
-					<div class="tit_box">
-						<h3 class="sort_tit">자동차보험</h3><span class="number">1</span>
-					</div>
-
-					<div class="insurance no_insurance">
-						<div>가입내역이 없습니다.</div>
-					</div>
-				</div>
-				<!-- insurance_list : e -->
-
-				<!-- insurance_list : s -->
-				<div class="insurance_list">
-					<div class="tit_box">
-						<h3 class="sort_tit">실효해지</h3><span class="number"><strong>2</strong>건</span>
-					</div>
-					<div class="list_box">
-						<a class="insurance disabled" href="#">
-							<div class="name">무배당 알파 Plus 보장보험(Ⅱ)0904</div>
-							<div class="payment_info">
-								<span class="state">정상</span>
-								<div class="info">
-									<div class="payment"><strong>69,030</strong>원 <span>매월납/12년</span></div>
-									<div class="date">2009.07.17~2082.07.17</div>
-								</div>
-							</div>
-							<div class="logo"><img alt="한화생명" class="grayscale" src="/resources/images/gu.renew.logo/logo_lifeplanet_life.png"></div>
-						</a>
-					</div>				
-				</div>
-				<!-- insurance_list : e -->
-
-				<!-- 유의사항 : s -->
-				<div class="note_box">
-					<dl>
-						<dt>유의사항</dt>
-						<dd>상기 내용 중 보험료에 대한 분석은 초회보험료를 납입만기까지 계속 납입하는 기준으로 산출한 것으로 중도에 계약이 변경되거나 특약의 납입기간이
-							상이할 경우 차이가 발생할 수 있습니다. 정확한 내용은 해당 보험회사에 문의해주시기 바랍니다.
-						</dd>
-						<dd>실손형담보의 보험료는 제외된 금액입니다. 실손형의 경우 갱신형으로 되어 있어 초회보험료와 향후 보험료가 상이하여 책정이 불가능 합니다.</dd>
-					</dl>
-				</div>
-				<!-- 유의사항 : e -->
+<div class="wrap sub">
+	<div class="top_area">
+		<ul class="menu_area">
+			<li class="home"><a class="home" href="#">홈으로</a></li>
+			<li class="util">
+				<a class="menu01" href="#">등록</a>
+				<a class="menu02" href="#">컨컬팅</a>
+				<a class="menu03" href="#">pdf sample</a>
+			</li>
+		</ul>
+		<div class="member_info_area">
+			<div class="name">
+				<strong>권은아</strong>
+				고객님
+				<button class="btn_like">즐겨찾기</button><!--활성화 class="btn_like on"-->
 			</div>
-			<!-- insurance_list_box : e -->
+			<ul class="info">
+				<li>
+					<span class="sex">여</span>
+					<span class="bday">1981.05.30</span>
+					<span class="age">32세</span>
+				</li>
+				<li>
+					<button class="btn_alert">상령일</button>
+					<span>11.30</span>
+				</li>
+			</ul>
 		</div>
-		<!-- content_area : e -->
+		<div class="conner_left"></div>
+		<div class="conner_right"></div>
 	</div>
+	<div class="content_area bgWhite">
+		<div class="top_info">
+			<ul>
+				<li class="default">
+					<div class="title">정상계약</div>
+					<div class="result"><strong>113</strong>건</div>
+				</li>
+				<li class="month">
+					<div class="title">정상계약</div>
+					<div class="result"><strong>11,264,530</strong>건</div>
+				</li>
+				<li class="list no">
+					<div class="title">미가입</div>
+					<div class="result"><strong>13</strong></div>
+				</li>
+				<li class="list lack">
+					<div class="title">부족</div>
+					<div class="result"><strong>13</strong></div>
+				</li>
+				<li class="list good">
+					<div class="title">충분</div>
+					<div class="result"><strong>13</strong></div>
+				</li>
+			</ul>
+		</div>
+
+		<!-- insurance_list_box : s -->
+		<div class="insurance_list_box">
+			<!-- insurance_list : s -->
+			<div class="insurance_list">
+				<div class="tit_box">
+					<h3 class="sort_tit">정상계약</h3><span class="number"><strong>2</strong>건</span>
+				</div>
+				
+				<div class="list_box">
+					<a class="insurance" href="#">
+						<div class="name">무배당 알파 Plus 보장보험(Ⅱ)0904</div>
+						<div class="payment_info">
+							<span class="state">정상</span>
+							<div class="info">
+								<div class="payment"><strong>69,030</strong>원 <span>매월납/12년</span></div>
+								<div class="date">2009.07.17~2082.07.17</div>
+							</div>
+						</div>
+						<div class="logo"><img alt="한화생명" src="/resources/images/gu.renew.logo/logo_hanwha_life.png"></div>
+					</a>
+					<a class="insurance" href="#">
+						<div class="name">무배당 알파 Plus 보장보험(Ⅱ)0904</div>
+						<div class="payment_info">
+							<span class="state">정상</span>
+							<div class="info">
+								<div class="payment"><strong>69,030</strong>원 <span>매월납/12년</span></div>
+								<div class="date">2009.07.17~2082.07.17</div>
+							</div>
+						</div>
+						<div class="logo"><img alt="한화생명" src="/resources/images/gu.renew.logo/logo_bnp_life.png"></div>
+					</a>
+				</div>
+			</div>
+			<!-- insurance_list : e -->
+
+			<!-- insurance_list : s -->
+			<div class="insurance_list">
+				<div class="tit_box">
+					<h3 class="sort_tit">자동차보험</h3><span class="number">1</span>
+				</div>
+
+				<div class="insurance no_insurance">
+					<div>가입내역이 없습니다.</div>
+				</div>
+			</div>
+			<!-- insurance_list : e -->
+
+			<!-- insurance_list : s -->
+			<div class="insurance_list">
+				<div class="tit_box">
+					<h3 class="sort_tit">실효해지</h3><span class="number"><strong>2</strong>건</span>
+				</div>
+				<div class="list_box">
+					<a class="insurance disabled" href="#">
+						<div class="name">무배당 알파 Plus 보장보험(Ⅱ)0904</div>
+						<div class="payment_info">
+							<span class="state">정상</span>
+							<div class="info">
+								<div class="payment"><strong>69,030</strong>원 <span>매월납/12년</span></div>
+								<div class="date">2009.07.17~2082.07.17</div>
+							</div>
+						</div>
+						<div class="logo"><img alt="한화생명" class="grayscale" src="/resources/images/gu.renew.logo/logo_lifeplanet_life.png"></div>
+					</a>
+				</div>				
+			</div>
+			<!-- insurance_list : e -->
+
+			<!-- 유의사항 : s -->
+			<div class="note_box">
+				<dl>
+					<dt>유의사항</dt>
+					<dd>상기 내용 중 보험료에 대한 분석은 초회보험료를 납입만기까지 계속 납입하는 기준으로 산출한 것으로 중도에 계약이 변경되거나 특약의 납입기간이
+						상이할 경우 차이가 발생할 수 있습니다. 정확한 내용은 해당 보험회사에 문의해주시기 바랍니다.
+					</dd>
+					<dd>실손형담보의 보험료는 제외된 금액입니다. 실손형의 경우 갱신형으로 되어 있어 초회보험료와 향후 보험료가 상이하여 책정이 불가능 합니다.</dd>
+				</dl>
+			</div>
+			<!-- 유의사항 : e -->
+		</div>
+		<!-- insurance_list_box : e -->
+	</div>
+
+	<!-- bottom_fixed_menu_area : s	-->
+	<div class="bottom_fixed_menu_area">
+		<button class="home"><span>고객리스트</span></button>
+		<ul>
+			<li><button class="bottom_menu menu01 on"><span>전체현황</span></button></li>
+			<li><button class="bottom_menu menu02"><span>가입현황</span></button></li>
+			<li><button class="bottom_menu menu03"><span>진단상세</span></button></li>
+			<li><button class="bottom_menu menu04"><span>컨설팅</span></button></li>
+			<li><button class="bottom_menu menu05"><span>그레프</span></button></li>
+		</ul>
+	</div>
+	<!-- bottom_fixed_menu_area : e	-->
 </div>
+
 </body>
 </html>
