--- a/mobile/resources/html/가입현황-상세내역.html
+++ b/mobile/resources/html/가입현황-상세내역.html
@@ -39,6 +39,8 @@
 			<a href="#" class="btn_prev"><span class="blind">이전페이지 이동</span></a>
 			<h1 class="title">무배당 알파 Plus 보장보험(Ⅱ) 0904</h1>
 		</div>
+		<div class="conner_left"></div>
+		<div class="conner_right"></div>
 	</div>
 	<div class="content_wrap">
 		<!-- content_area : s -->
