--- a/mobile/resources/html/가입현황.html
+++ b/mobile/resources/html/가입현황.html
@@ -13,7 +13,7 @@
 	<script src="/resources/js/gu.renew.common.ui.js"></script>
 	<script>
 		$(function () {
-
+			subMenuActive(1)
 		})
 	</script>
 </head>
@@ -32,7 +32,7 @@
 			<div class="name">
 				<strong>권은아</strong>
 				고객님
-				<button class="btn_like">즐겨찾기</button><!--활성화 class="btn_like on"-->
+				<button class="favorites">즐겨찾기</button><!--활성화 class="btn_like on"-->
 			</div>
 			<ul class="info">
 				<li>
