--- a/mobile/resources/html/가입현황-상세내역.html
+++ b/mobile/resources/html/가입현황-상세내역.html
@@ -236,6 +236,17 @@
 						</ul>
 					</div>
 				</div>
+				<!-- 유의사항 : s -->
+				<div class="note_box">
+					<dl>
+						<dt>유의사항</dt>
+						<dd>상기 내용 중 보험료에 대한 분석은 초회보험료를 납입만기까지 계속 납입하는 기준으로 산출한 것으로 중도에 계약이 변경되거나 특약의 납입기간이 상이할 경우 차이가 발생할 수 있습니다. 
+							정확한 내용은 해당 보험회사에 문의해주시기 바랍니다.
+						</dd>
+						<dd>실손형보장의 보험료는 제외된 금액입니다. 실손형의 경우 갱신형으로 되어 있어 초회보험료와 향후 보험료가 상이하여 책정이 불가능 합니다.</dd>
+					</dl>
+				</div>
+				<!-- 유의사항 : e -->
 			</div>
 			<!-- insurance_detail_tab : e-->
 		</div>
