--- a/mobile/resources/html/컨설팅.html
+++ b/mobile/resources/html/컨설팅.html
@@ -13,7 +13,7 @@
 	<script src="/resources/js/gu.renew.common.ui.js"></script>
 	<script>
 		$(function () {
-
+			subMenuActive(3)
 		})
 	</script>
 </head>
@@ -80,12 +80,25 @@
 		<div class="insurance_list_box">
 			<!-- insurance_list : s -->
 			<div class="insurance_list check_list">
+					<div class="tit_box">
+						<h3 class="sort_tit">가계약</h3><span class="number"><strong>0</strong>건</span>
+					</div>
+					
+					<div class="list_box">
+						<button class="btn_contract_add">
+							<div>가계약을 등록해 주세요.</div>
+						</button>
+					</div>
+				</div>
+				<!-- insurance_list : e -->
+			<!-- insurance_list : s -->
+			<div class="insurance_list check_list">
 				<div class="tit_box">
 					<h3 class="sort_tit">정상계약</h3><span class="number"><strong>2</strong>건</span>
 				</div>
 				
 				<div class="list_box">
-					<button class="insurance">
+					<button class="insurance"><!-- 체크시 class 'checked' 추가  -->
 						<div class="name">무배당 알파 Plus 보장보험(Ⅱ)0904</div>
 						<div class="payment_info">
 							<span class="state">정상</span>
@@ -107,7 +120,7 @@
 								</li>
 								<li>
 									<span class="tit">청약일</span>
-									<div class="txt">2019.10.14</div>
+									<div class="txt"><strong>2019.10.14</strong></div>
 								</li>
 							</ul>
 						</div>
@@ -122,41 +135,24 @@
 							</div>
 						</div>
 						<div class="logo"><img alt="한화생명" src="/resources/images/gu.renew.logo/logo_bnp_life.png"></div>
+						<div class="etc_info">
+							<ul>
+								<li>
+									<span class="tit">보험료</span>
+									<div class="txt"><strong>50,000</strong>원</div>
+								</li>
+								<li>
+									<span class="tit">납기/만기</span>
+									<div class="txt"><strong>20</strong>년/<strong>100</strong>년</div>
+								</li>
+								<li>
+									<span class="tit">청약일</span>
+									<div class="txt"><strong>2019.10.14</strong></div>
+								</li>
+							</ul>
+						</div>
 					</button>
 				</div>
-			</div>
-			<!-- insurance_list : e -->
-
-			<!-- insurance_list : s -->
-			<div class="insurance_list">
-				<div class="tit_box">
-					<h3 class="sort_tit">자동차보험</h3><span class="number">1</span>
-				</div>
-
-				<div class="insurance no_insurance">
-					<div>가입내역이 없습니다.</div>
-				</div>
-			</div>
-			<!-- insurance_list : e -->
-
-			<!-- insurance_list : s -->
-			<div class="insurance_list">
-				<div class="tit_box">
-					<h3 class="sort_tit">실효해지</h3><span class="number"><strong>2</strong>건</span>
-				</div>
-				<div class="list_box">
-					<a class="insurance disabled" href="#">
-						<div class="name">무배당 알파 Plus 보장보험(Ⅱ)0904</div>
-						<div class="payment_info">
-							<span class="state">정상</span>
-							<div class="info">
-								<div class="payment"><strong>69,030</strong>원 <span>매월납/12년</span></div>
-								<div class="date">2009.07.17~2082.07.17</div>
-							</div>
-						</div>
-						<div class="logo"><img alt="한화생명" class="grayscale" src="/resources/images/gu.renew.logo/logo_lifeplanet_life.png"></div>
-					</a>
-				</div>				
 			</div>
 			<!-- insurance_list : e -->
 		</div>
