--- a/mobile/resources/html/가입현황-상세내역.html
+++ b/mobile/resources/html/가입현황-상세내역.html
@@ -71,7 +71,7 @@
 					</div>
 					<div class="etc_info">
 						<div class="left_txt">
-							<span class="state">정상</span>
+							<span class="state">정상</span><!-- 해지시 class 'cancel' 추가-->
 							<div class="date">2009.07.17 ~ 2082.07.17</div>
 						</div>
 						<div class="right_txt">
@@ -116,7 +116,7 @@
 										<div class="info">상해+질병 외래의료비</div>
 									</div>
 									<div class="state_info">
-										<span class="state">정상</span>
+										<span class="state cancel">해지</span>
 										<span class="info">2천만원</span>
 									</div>
 								</div>
