가계약조회리스트

--- a/mobile/resources/html/팝업-가계약 추가.html
+++ b/mobile/resources/html/팝업-가계약 추가.html
@@ -2,31 +2,28 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>submain</title>
+	<meta content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no" name="viewport">
+	<title>Title</title>
 	<link href="/resources/css/gu.renew.style.css" rel="stylesheet">
 	<script src="/resources/js/lib/jquery.min.js"></script>
 	<script src="/resources/js/lib/jquery.nice-select.min.js"></script>
+	<script src="/resources/js/lib/core.js"></script>
+	<script src="/resources/js/lib/charts.js"></script>
+	<script src="/resources/js/lib/animated.js"></script>
 	<script src="/resources/js/gu.renew.common.ui.js"></script>
-	<script>
-		$(function () {
-			$(".table_scroll").mCustomScrollbar({
-				scrollInertia: 150
-			});
-		})
-	</script>
+	
 </head>
 <body style="background:rgba(0,0,0,0.5)">
 <!-- layer_pop_wrap : s -->
 <div class="layer_pop_wrap pop_alert">
-	<div class="layer_pop_header">
-		<h2>컨설팅</h2>
-	</div>
 	<div class="layer_pop_content">
 		<div class="center_box">
-			<div>가계약을 추가하시겠습니까?</div>
+			<div class="txt">가계약을 추가하시겠습니까?</div>
 		</div>
+	</div>
+	<div class="layer_pop_bottom">		
 		<div class="btn_area">
-			<a class="btn_text" href="#"><span>아니요</span></a>
+			<a class="btn_text fill_gray2" href="#"><span>아니요</span></a>
 			<a class="btn_text fill_red" href="#"><span>예</span></a>
 		</div>
 	</div>
